--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 /* Reset styles */
 
+html {
+  /*   Додати щоб скролл був повільний */
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Inter", sans-serif;
   color: #434455;
@@ -227,10 +232,14 @@ img {
   width: 91px;
   height: 40px;
   border-radius: 8px;
-  background-color: #1b414b;
+  background-color: rgba(27, 65, 75, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.mob-item.part {
+  background-color: #1b414b;
 }
 
 .mob-nav-link {
@@ -249,5 +258,7 @@ img {
 }
 
 .mob-icon {
+  display: block;
   fill: #fbfbfb;
+  transition: fill 250ms ease-out;
 }
